--- a/expense-tracker.html
+++ b/expense-tracker.html
@@ -7,6 +7,16 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+   <div class="container">
+    <h1>Expense-tracker</h1>
+    <form id="expense-form">
+        <input type="text" id="expense-name" placeholder="Expense name" required>
+        <input type="text" id="expense-amount" placeholder="Amount" required>
+        <button type="submit">Add</button>
+    </form>
+    <ul id="expense-list"></ul>
+    <h3>Total:$<span id="total">0</span></h3>
+   </div>
     <script src="./expense-tracker.js"></script>
 </body>
 </html>
