--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Expense-tracker-js</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
    <div class="container">
@@ -17,6 +17,6 @@
     <ul id="expense-list"></ul>
     <h3>Total:$<span id="total">0</span></h3>
    </div>
-    <script src="./expense-tracker.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
